# parallel-printer-symmetry

./: Data Processing.ods  README.md
Decomposed Models/1053374_11/: 1.off  1.stl  2.off  2.stl  3.off  3.stl  4.off  4.stl  5.off  5.stl  6.off  6.stl  7.off  7.stl  8.off  8.stl  assembly.txt
Decomposed Models/1053374_15/: 1.off  1.stl  2.off  2.stl  3.off  3.stl  4.off  4.stl  5.off  5.stl  6.off  6.stl  7.off  7.stl  assembly.txt
Decomposed Models/1053374_2/: 1.off  1.stl  2.off  2.stl
Decomposed Models/1053374_3/: 1.off  1.stl  2.off  2.stl  3.off  3.stl
Decomposed Models/1053374_4/: 1.off  1.stl  2.off  2.stl  3.off  3.stl  4.off  4.stl
Decomposed Models/1053374_8/: 1.off  1.stl  2.off  2.stl  3.off  3.stl  4.off  4.stl  5.off  5.stl  6.off  6.stl  7.off  7.stl
Decomposed Models/1053874_11/: 1.off  1.stl  10.off  10.stl  11.off  11.stl  2.off  2.stl  3.off  3.stl  4.off  4.stl  5.off  5.stl  6.off  6.stl  7.off  7.stl  8.off  8.stl  9.off  9.stl  assembly.txt
Decomposed Models/1053874_15/: 1.off  1.stl  10.off  10.stl  11.off  11.stl  12.off  12.stl  13.off  13.stl  14.off  14.stl  15.off  15.stl  2.off  2.stl  3.off  3.stl  4.off  4.stl  5.off  5.stl  6.off  6.stl  7.off  7.stl  8.off  8.stl  9.off  9.stl  assembly.txt
Decomposed Models/1053874_2/: 1.off  1.stl  2.off  2.stl
Decomposed Models/1053874_3/: 1.off  1.stl  2.off  2.stl  3.off  3.stl
Models/: 41084.stl  73154.stl  Cube100mm.stl  Cube20mm.stl  Cube50mm.stl  HappyPot.stl  Snail.stl
Parallel Printer/: CMakeLists.txt  ParallelPrinter.cpp  ParallelPrinter.h
(+2650 files in other folders)
